# android-webrtc-aecm

./: README.md  libaecm-release.aar  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/theeasiestway/aecm/: MainActivity.java
app/src/main/java/ru/theeasiestway/aecm/voice/: VoicePlayer.java  VoiceRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
libaecm/: build.gradle
libaecm/src/main/: AndroidManifest.xml
libaecm/src/main/cpp/: CMakeLists.txt
libaecm/src/main/cpp/aecm/: AEC.c  AEC.h
libaecm/src/main/cpp/log/: debug_log.h
libaecm/src/main/java/ru/theeasiestway/libaecm/: AEC.java
libaecm/src/main/res/values/: strings.xml
